# PiTSZ

./: .gitignore  README.md  all-scores.py  compile_commands.json  flake.nix  get-score.sh  get-time.sh  instance.out  out.txt  outfile  run.sh  solution.cpp  solution.out  times.csv  verifier.sh
151908_algorithm(1)/: 151908.out  README.md  generator.cpp
a2/: 151481.py  151735.py  151751.py  151798.py  151841.py  151904.py  152042.py
algo1/: 151908.out  CMakeLists.txt  README.md  check.sh  compile_commands.json  generate.sh  out.txt  package.nix  pajton.py  solution.cpp  solution.txt  verifier.cpp
algo2/: pajton.py
algo3/: 151908.py  pajton.py
algorithm1/: CMakeLists.txt  verifier.cpp
algorytmy/: 151481.py  151735.py  151751.py  151798.py  151799.py  151804.out  151804.py  151812.py  151815.py  151841.py  151866.py  151876.py  151904.py  152042.py
all_algo2/: 151799.py  151804.py  151812.py  151815.py  151866.py  151876.py
include/: common.h
my_instances/: in_151908_100.txt  in_151908_150.txt  in_151908_200.txt  in_151908_250.txt  in_151908_300.txt  in_151908_350.txt  in_151908_400.txt  in_151908_450.txt  in_151908_50.txt  in_151908_500.txt
pliki wynikowe/: out_50
solutions1/: out_50
solutions2/: in_151908_50
wynikowe2/: out_500
wynikowe3/: out_100  out_150  out_200  out_250  out_300  out_350  out_400  out_450  out_50  out_500  out_50A  out_50B  out_50C
